[ADD]: front begin

--- a/Windows/MedWatchAddWindow.xaml
+++ b/Windows/MedWatchAddWindow.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="curse_work.MenuWindow"
+﻿<Window x:Class="curse_work.Windows.MedWatchAddWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:curse_work"
+        xmlns:local="clr-namespace:curse_work.Windows"
         mc:Ignorable="d"
-        Title="MenuWindow" Height="450" Width="800">
+        Title="MedWatchAddWindow" Height="450" Width="800">
     <Grid>
         
+
     </Grid>
 </Window>
