[ADD]: add doctor

--- a/Windows/DoctorsListWindow.xaml
+++ b/Windows/DoctorsListWindow.xaml
@@ -1,14 +1,13 @@
-﻿<Window x:Class="curse_work.MedListWindow"
+﻿<Window x:Class="curse_work.Windows.DoctorsListWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:curse_work"
+        xmlns:local="clr-namespace:curse_work.Windows"
         mc:Ignorable="d"
-        Title="MedListWindow" Height="450" Width="800">
+        Title="DoctorsListWindow" Height="450" Width="800">
     <Grid>
         <Button Content="Удалить Запись" HorizontalAlignment="Left" Margin="130,320,0,0" VerticalAlignment="Top" Height="32" Width="105"/>
-        <Button Content="Добавить Запись" HorizontalAlignment="Left" Margin="262,320,0,0" VerticalAlignment="Top" Height="32" Width="108"/>
-
+        <Button Content="Добавить Запись" HorizontalAlignment="Left" Margin="262,320,0,0" VerticalAlignment="Top" Height="32" Width="108" Click="Button_Click"/>
     </Grid>
 </Window>
