--- a/Windows/DeleteMedWatchWindow.xaml
+++ b/Windows/DeleteMedWatchWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:curse_work.Windows"
         mc:Ignorable="d"
-        Title="DeleteMedWatchWindow" Height="450" Width="800">
+        Title="DeleteMedWatchWindow" Height="169" Width="297">
     <Grid>
-        
+        <ComboBox HorizontalAlignment="Center" Margin="0,61,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Удалить" HorizontalAlignment="Center" Margin="0,111,0,0" VerticalAlignment="Top" Width="67"/>
     </Grid>
 </Window>
