--- a/Windows/MedWatchAddWindow.xaml
+++ b/Windows/MedWatchAddWindow.xaml
@@ -5,9 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:curse_work.Windows"
         mc:Ignorable="d"
-        Title="MedWatchAddWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MedWatchAddWindow" Height="376" Width="579">
+    <Grid Margin="0,0,10,11">
+        <Button Content="Добавить" HorizontalAlignment="Center" Margin="0,281,0,0" VerticalAlignment="Top" Height="31" Width="100"/>
+        <TextBox HorizontalAlignment="Left" Margin="278,181,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="144" Height="23"/>
+        <TextBox HorizontalAlignment="Left" Margin="278,143,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="144" Height="23"/>
+        <TextBox HorizontalAlignment="Left" Margin="278,100,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="144" Height="23"/>
+        <TextBox HorizontalAlignment="Left" Margin="278,58,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="144" Height="23"/>
+        <Label Content="ФИО" HorizontalAlignment="Left" Margin="224,57,0,0" VerticalAlignment="Top"/>
+        <Label Content="Врач" HorizontalAlignment="Left" Margin="224,99,0,0" VerticalAlignment="Top"/>
+        <Label Content="Время" HorizontalAlignment="Left" Margin="216,142,0,0" VerticalAlignment="Top"/>
+        <Label Content="Дополнительная информация" HorizontalAlignment="Left" Margin="82,178,0,0" VerticalAlignment="Top" Width="180"/>
+
 
     </Grid>
 </Window>
