[ADD]: windows, signin

--- a/Windows/MedSessions/MedListWindow.xaml
+++ b/Windows/MedSessions/MedListWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="MedListWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Удалить Запись" HorizontalAlignment="Left" Margin="130,320,0,0" VerticalAlignment="Top" Height="32" Width="105"/>
-        <Button Content="Добавить Запись" HorizontalAlignment="Left" Margin="262,320,0,0" VerticalAlignment="Top" Height="32" Width="108"/>
+        <Button Content="Удалить Запись" HorizontalAlignment="Left" Margin="130,320,0,0" VerticalAlignment="Top" Height="32" Width="105" Click="Delete_Button_Click"/>
+        <Button Content="Добавить Запись" HorizontalAlignment="Left" Margin="262,320,0,0" VerticalAlignment="Top" Height="32" Width="108" Click="Add_Button_Click"/>
 
     </Grid>
 </Window>
