--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:curse_work"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" MinHeight="450" MinWidth="800" MaxHeight="450" MaxWidth="800">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Center" Margin="0,217,0,0" VerticalAlignment="Top" Click="Button_Click"/>
-        <TextBox Name="Login" HorizontalAlignment="Center" Margin="0,139,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="Password" HorizontalAlignment="Center" Margin="0,171,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-
+        <Button Content="Вход" HorizontalAlignment="Center" Margin="0,239,0,0" VerticalAlignment="Top" Click="Button_Click" Height="25" Width="94"/>
+        <TextBox Name="Login" HorizontalAlignment="Left" Margin="355,135,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="178" Height="24"/>
+        <TextBox Name="Password" HorizontalAlignment="Left" Margin="355,175,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="178" Height="25"/>
+        <Label Content="Логин" HorizontalAlignment="Left" Margin="288,135,0,0" VerticalAlignment="Top"/>
+        <Label Content="Пароль" HorizontalAlignment="Left" Margin="288,175,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
