--- a/Windows/MedSessions/DeleteMedWatchWindow.xaml
+++ b/Windows/MedSessions/DeleteMedWatchWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="DeleteMedWatchWindow" Height="170" Width="300">
     <Grid>
-        <ComboBox HorizontalAlignment="Center" Margin="0,61,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Удалить" HorizontalAlignment="Center" Margin="0,111,0,0" VerticalAlignment="Top" Width="67"/>
+        <ComboBox Name="cb" HorizontalAlignment="Center" Margin="0,61,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Удалить" HorizontalAlignment="Center" Margin="0,111,0,0" VerticalAlignment="Top" Width="67" Click="Button_Click"/>
     </Grid>
 </Window>
