--- a/Windows/Purchases/DeleteDoctorWindow.xaml
+++ b/Windows/Purchases/DeleteDoctorWindow.xaml
@@ -8,6 +8,6 @@
         Title="DeleteDoctorWindow" Height="170" Width="300">
     <Grid>
         <ComboBox Name="cb" HorizontalAlignment="Center" Margin="0,61,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Удалить" HorizontalAlignment="Center" Margin="0,111,0,0" VerticalAlignment="Top" Width="67"/>
+        <Button Content="Удалить" HorizontalAlignment="Center" Margin="0,111,0,0" VerticalAlignment="Top" Width="67" Click="Button_Click"/>
     </Grid>
 </Window>
