--- a/Windows/MedSessions/MedListWindow.xaml
+++ b/Windows/MedSessions/MedListWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:curse_work"
         mc:Ignorable="d"
-        Title="MedListWindow" Height="450" Width="800">
+        Title="MedListWindow" MinHeight="450" MinWidth="800" MaxHeight="450" MaxWidth="800">
     <Grid>
         <DataGrid Name="medListGrid" />
         <Button Content="Удалить Запись" HorizontalAlignment="Left" Margin="130,320,0,0" VerticalAlignment="Top" Height="32" Width="105" Click="Delete_Button_Click"/>
